Minor changes to knitting

--- a/project_final_writeup.Rmd
+++ b/project_final_writeup.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Psych 10 Project: Milestone 3"
-authors:
+author: Daniel Chen, Adamari Alamillo, and Marilyn Frank
 output: html_document
 ---
 
